--- a/pom.xml
+++ b/pom.xml
@@ -26,5 +26,10 @@
       <artifactId>json-simple</artifactId>
       <version>1.1.1</version>
     </dependency>
+    <dependency>
+      <groupId>com.jfoenix</groupId>
+      <artifactId>jfoenix</artifactId>
+      <version>1.0.0</version>
+    </dependency>
   </dependencies>
 </project>
