--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,14 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
+  <build>
+    <resources>
+      <resource>
+        <directory>res</directory>
+      </resource>
+    </resources>
+  </build>
+
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
