--- a/pom.xml
+++ b/pom.xml
@@ -39,5 +39,10 @@
       <artifactId>jfoenix</artifactId>
       <version>1.0.0</version>
     </dependency>
+    <dependency>
+      <groupId>com.rometools</groupId>
+      <artifactId>rome</artifactId>
+      <version>1.0RC2</version>
+    </dependency>
   </dependencies>
 </project>
