--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
     <dependency>
       <groupId>com.rometools</groupId>
       <artifactId>rome</artifactId>
-      <version>1.0RC2</version>
+      <version>1.0</version>
     </dependency>
   </dependencies>
 </project>
