Create Error logging methods (cherry picked from commit e4e51a2)

--- a/pom.xml
+++ b/pom.xml
@@ -39,5 +39,20 @@
       <artifactId>jfoenix</artifactId>
       <version>1.0.0</version>
     </dependency>
+    <dependency>
+      <groupId>rome</groupId>
+      <artifactId>rome</artifactId>
+      <version>1.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.jdom</groupId>
+      <artifactId>jdom</artifactId>
+      <version>1.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-log4j12</artifactId>
+      <version>1.7.21</version>
+    </dependency>
   </dependencies>
 </project>
