--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: java
 jdk: oraclejdk8
-install: mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+addons:
+  apt:
+    packages:
+      - oracle-java8-installer
 script: mvn clean validate
 after_success:
   ./on_success.sh
