--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,8 @@ addons:
     packages:
       - oracle-java8-installer
 script: mvn clean validate
+ after_success:
+    ./on_success.sh
+ after_failure:
+   ./on_failure.sh
 
