--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: java
 jdk: oraclejdk8
+install: ghi
 addons:
   apt:
     packages:
@@ -7,4 +8,3 @@ addons:
 script: mvn clean validate
 after_success: on_success.sh
 after_failure: on_failure.sh
-
