--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: java
 jdk: oraclejdk8
+addons:
+  apt:
+    packages:
+      - oracle-java8-installer
 script: mvn clean validate
 after_success:
   ./on_success.sh
