--- a/pom.xml
+++ b/pom.xml
@@ -63,7 +63,7 @@
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-java</artifactId>
-      <version>3.0.0-beta3</version>
+      <version>2.53.1</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
