Get HTML of ipass schedule page

--- a/pom.xml
+++ b/pom.xml
@@ -70,5 +70,10 @@
       <artifactId>slf4j-log4j12</artifactId>
       <version>1.7.21</version>
     </dependency>
+    <dependency>
+      <groupId>org.seleniumhq.selenium.fluent</groupId>
+      <artifactId>fluent-selenium</artifactId>
+      <version>1.14.2</version>
+    </dependency>
   </dependencies>
 </project>
