--- a/pom.xml
+++ b/pom.xml
@@ -70,5 +70,10 @@
       <artifactId>slf4j-log4j12</artifactId>
       <version>1.7.21</version>
     </dependency>
+      <dependency>
+          <groupId>org.hamcrest</groupId>
+          <artifactId>hamcrest-core</artifactId>
+          <version>1.3</version>
+      </dependency>
   </dependencies>
 </project>
