--- a/pom.xml
+++ b/pom.xml
@@ -76,5 +76,10 @@
           <artifactId>hamcrest-core</artifactId>
           <version>1.3</version>
       </dependency>
+    <dependency>
+      <groupId>org.jsoup</groupId>
+      <artifactId>jsoup</artifactId>
+      <version>1.8.3</version>
+    </dependency>
   </dependencies>
 </project>
