--- a/pom.xml
+++ b/pom.xml
@@ -80,5 +80,15 @@
       <artifactId>google-api-services-gmail</artifactId>
       <version>v1-rev48-1.22.0</version>
     </dependency>
+      <dependency>
+          <groupId>com.google.oauth-client</groupId>
+          <artifactId>google-oauth-client</artifactId>
+          <version>1.22.0</version>
+      </dependency>
+      <dependency>
+          <groupId>com.google.api-client</groupId>
+          <artifactId>google-api-client</artifactId>
+          <version>1.22.0</version>
+      </dependency>
   </dependencies>
 </project>
