add oauth depends

--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,12 @@
           <artifactId>google-oauth-client-java6</artifactId>
           <version>1.11.0-beta</version>
       </dependency>
+      <dependency>
+          <groupId>com.google.oauth-client</groupId>
+          <artifactId>google-oauth-client-jetty</artifactId>
+          <version>1.11.0-beta</version>
+      </dependency>
+
 
   </dependencies>
 </project>
