--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,11 @@
           <artifactId>mail</artifactId>
           <version>1.4</version>
       </dependency>
+      <dependency>
+          <groupId>org.apache.httpcomponents</groupId>
+          <artifactId>httpclient</artifactId>
+          <version>4.3.5</version>
+      </dependency>
 
 
 
