--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ addons:
   apt:
     packages:
       - oracle-java8-installer
-script: mvn clean validate & mvn test
+script: mvn clean validate; mvn test
 after_success:
   ./on_success.sh
 after_failure:
