Everyones gonna fail all of a sudden
Its okay we are now testing with mvn

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ addons:
   apt:
     packages:
       - oracle-java8-installer
-script: mvn clean validate
+script: mvn clean validate; mvn test
 after_success:
   ./on_success.sh
 after_failure:
