--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,7 @@ jdk: oraclejdk8
 before-install: 
   - sudo apt-add-repository ppa:webupd8team/java
   - sudo apt-get update
-addons:
-  apt:
-    packages:
-      - oracle-java8-installer
+  - sudo apt-get install oracle-java8-installer
 script: mvn clean validate; mvn test
 after_success:
   ./on_success.sh
