--- a/pom.xml
+++ b/pom.xml
@@ -45,11 +45,11 @@
       <artifactId>json-simple</artifactId>
       <version>1.1.1</version>
     </dependency>
-    <dependency>
-      <groupId>com.jfoenix</groupId>
-      <artifactId>jfoenix</artifactId>
-      <version>1.0.0</version>
-    </dependency>
+    <!--<dependency>-->
+      <!--<groupId>com.jfoenix</groupId>-->
+      <!--<artifactId>jfoenix</artifactId>-->
+      <!--<version>1.0.0</version>-->
+    <!--</dependency>-->
     <dependency>
       <groupId>rome</groupId>
       <artifactId>rome</artifactId>
