--- a/pom.xml
+++ b/pom.xml
@@ -73,11 +73,16 @@
             <version>4.11</version>
         </dependency>
         <dependency>
-            <groupId>jfoenix</groupId>
-            <artifactId>com.jfoenix</artifactId>
+            <groupId>com.jfoenix</groupId>
+            <artifactId>jfoenix</artifactId>
             <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.sql</groupId>
+            <artifactId>jdbc-stdext</artifactId>
+            <version>2.0</version>
             <scope>system</scope>
-            <systemPath>${project.basedir}/lib/jfoenix.jar</systemPath>
+            <systemPath>${java.home}/lib/rt.jar</systemPath>
         </dependency>
         <dependency>
             <!-- jsoup HTML parser library @ http://jsoup.org/ -->
