--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
                     <jrePath>/Library/Java/JavaVirtualMachines/jdk1.8.0_92.jdk</jrePath>
                     <mainClass>WHS_planner.Main</mainClass>
                     <generateDiskImageFile>true</generateDiskImageFile>
-                <iconFile>src/main/resources/UI/icon.png</iconFile>
+                    <iconFile>${project.basedir}/src/main/resources/UI/icon.png</iconFile>
             </configuration>
             <executions>
                 <execution>
@@ -134,19 +134,9 @@
             <version>1.1</version>
         </dependency>
         <dependency>
-            <groupId>org.seleniumhq.selenium</groupId>
-            <artifactId>selenium-java</artifactId>
-            <version>2.45.0</version>
-        </dependency>
-        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.7.21</version>
-        </dependency>
-        <dependency>
-            <groupId>org.seleniumhq.selenium.fluent</groupId>
-            <artifactId>fluent-selenium</artifactId>
-            <version>1.14.2</version>
         </dependency>
         <dependency>
             <groupId>com.google.apis</groupId>
