--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,11 @@
 sudo: required
 language: java
 jdk: openjdk8
-addons:
-  apt:
-    packages:
-      - openjdk-8-jdk
 dist: xenial
-script: mvn clean validate; mvn test
+script:
+  - sudo apt install openjdk-8-jdk
+  - apt install openjfx=8u161-b12-1ubuntu2 libopenjfx-jni=8u161-b12-1ubuntu2 libopenjfx-java=8u161-b12-1ubuntu2
+  - mvn clean validate; mvn test
 after_success:
   ./on_success.sh
 after_failure:
